# pysros_cli

./: README.md  pyproject.toml
src/pysros_cli/: main.py
