[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysros_cli"
version = "0.1.0"
description = "CLI tool for Nokia SROS devices using pySROS"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pysros>=23.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.10.0",
    "pytest>=7.4.0",
]

[project.scripts]
pysros_cli = "pysros_cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py38"
lint.select = ["E", "F", "B", "I"]

[tool.black]
line-length = 100
target-version = ["py38"]